tests/NormalTests/paczka1/small_fuzzy/75613505.err
Error in line 2: wv51N5c S447 98,0
Error in line 6: KiqQb4Yw A448 148,31
Error in line 11: 3BVpCfhq A524 0,5
Error in line 13: 3BVpCfhq S447 21,7
